--- a/wp-content/themes/smart/style.css
+++ b/wp-content/themes/smart/style.css
@@ -1906,6 +1906,12 @@ span.heading {
     margin-left: 15px;
     list-style-type: none;
 }
+.white_block {
+    padding: 30px 0;
+}
+.white_block ul li {
+    margin-left: 16px;
+}
 
 /*#################### Адаптация ####################*/
 .right-side {
